--- a/model.tex
+++ b/model.tex
@@ -9,30 +9,6 @@
         \label{Fig:CerberusQueues}
 \end{figure}
 
-The traditional batch scheduler on a system without burst buffer only considers
-the job with the number of required nodes and the expected runtime
-for making the scheduling decisions.
-The most commonly used scheduling policy is the First Come First Serve with EASY backfilling~\cite{tsafrir-tpds-2007}.
-However, on burst-buffer-enabled systems,
-the amount of available burst buffer capacity becomes a new scheduling constraint.
-
-In this work,
-we propose Cerberus, a burst-buffer-aware batch scheduler.
-We assume that upon job submission, 
-a user specifies the amount of compute nodes, 
-the expected job runtime, 
-and the amount of burst buffer needed by her job. 
-Cerberus makes scheduling decisions based on the most common use cases of burst buffer:
-data stage-in, checkpointing, and data stage-out.
-Cerberus allocates burst buffer to each job with regard to its use cases
-by maintaining three distinct queues, as shown in Figure~\ref{Fig:CerberusQueues}.
-The input queue $Q_I$ contains all the jobs that need to prefetch data from the external storage to the burst buffer.
-The running queue $Q_R$ holds the jobs that are waiting for the compute nodes and the burst buffer used for checkpointing.
-Jobs waiting to be drained out to the external permanent storage are in the output queue $Q_O$.
-The layered hierarchy in Figure~\ref{Fig:CerberusQueues} also indicates that burst buffer
-can fill in the memory gap between the memory on compute nodes and the hard disk storage.
-Cerberus coordinates three queues and makes scheduling decisions according to job requirements in each queue with the objective to maximize job performance and system utilization.
-
 Before we give the details of our Cerberus design, 
 in this section we describe our three-phase job model 
 and the corresponding resource demand at each phase. 
@@ -75,12 +51,14 @@ and the corresponding resource demand at each phase.
 %they could burst the checkpoint data to the burst buffer at high speed.
 %Upon the job completion, 
 %useful output data are staged out to the burst buffer for early releasing the compute nodes.
-%Therefore, we divide the job lifetime into three different phases, as illustrated in Figure~\ref{Fig:CerberusQueues}. \NOTE{I prefer we keep this paragraph. Because it explains why 3-Phase make sense. 3-Phase is based on app's use case of bb.}
+%Therefore, we divide the job lifetime into three different phases, as illustrated in
+%Figure~\ref{Fig:CerberusQueues}.
+%\NOTE{I prefer we keep this paragraph. Because it explains why 3-Phase make sense.3-Phase is based on app's use case of bb.}
 
  
-\textbf{Stage-In}: After submitting the job to the system,
-         Cerberus needs to prefetch data, such as configuration files and input data,
-         from IO nodes to the burst buffer. We define this phase as \textit{stage-in}.
+\textbf{Stage-In}: After submitted to the HPC system,
+         jobs need to prefetch data, such as configuration files and input data,
+         from PFS to the burst buffer. We define this phase as \textit{stage-in}.
          The only resource needed by the job in this phase is the burst buffer.
          Users are encouraged to specify the amount of burst buffer required in the \textit{stage-in} phase.
          The job is ready to run when the data is prefetched into the burst buffer.
@@ -91,7 +69,7 @@ and the corresponding resource demand at each phase.
          This is defined as \textit{running} phase.
          During the running phase, there could be frequent data exchange
          between the compute nodes and the burst buffer.
-         These interactions, such as like check-pointing, are mainly for achieving system fault tolerance. 
+         These interactions, like check-pointing, are mainly for achieving system fault tolerance. 
  
 \textbf{Stage-out}: When the job finishes computation and
          exits the \textit{running} phase, its output data need to be drained out
@@ -137,8 +115,8 @@ We consider two possible ways that users provide the burst buffer demand.
 For the users with accurate speculation about their job's burst buffer demand in each phase,
 they may provide a \textit{burst buffer triple} in the form of $(bb\_in, bb\_run, bb\_out)$,
 where $bb\_in$ is the volume of burst buffer for staging in data files,
-$bb\_run$ is for checkpointing during the execution, and
-$bb\_out$ is for staging out the output data.
+$bb\_run$ is the volume of the burst buffer for checkpointing during the execution, and
+$bb\_out$ is the volume of the burst buffer for staging out the output data.
 % A job that providing demand vector augmented with
 % burst buffer triple is called a \textit{3-phase modeled job}.
 We will show the benefits of providing the job burst buffer demand in the form of \textit{burst buffer triple} in Section~\ref{Sec:Experiments}.
